--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "nodemon": "nodemon index.js",
+    "startN": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -13,8 +13,6 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
-    "coingecko-api": "^1.0.10",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
